--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -5,7 +5,7 @@
     <div ng-if="mctrl.showingLogin"> -->
 
       <form  action="/sessions/login" method="POST">
-         <input type="text" name="username" value="">
+         <input type="text" name="email" value="">
          <input type="password" name="password" value="">
          <button>Login</button> <!--ng-click="mctrl.showingRegister=false; mctrl.showingLogin=false;"-->
       </form>
@@ -17,7 +17,7 @@
     <div ng-if="mctrl.showingRegister"> -->
 
       <form action="/sessions/register" method="POST">
-         <input type="text" name="username" value="">
+         <input type="text" name="email" value="">
          <input type="password" name="password" value="">
          <button>Register</button>
       </form>
