--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -1,3 +1,4 @@
+<div ng-controller="userController as uctrl">
 <div ng-if="mctrl.loggedIn">Log Out</div> <!--//make this do stuff -->
 <div ng-if="!mctrl.loggedIn">
   <div id="login">
@@ -16,9 +17,9 @@
     <!-- <div ng-if="!mctrl.showingRegister" ng-click="mctrl.showingRegister=true; mctrl.showingLogin=false;">REGISTER</div>
     <div ng-if="mctrl.showingRegister"> -->
 
-      <form action="/sessions/register" method="POST">
-         <input type="text" name="email" value="">
-         <input type="password" name="password" value="">
+      <form ng-submit="uctrl.postUser()">
+         <input ng-model="uctrl.email" type="text" name="email" value="">
+         <input ng-model="uctrl.password" type="password" name="password" value="">
          <input type="submit" value="register">
       </form>
       <!-- Adding angular to the form data, specifically in the case of:
@@ -26,4 +27,5 @@
       detaches the data from the form somehow.  Therefore, I have to revert my code to something more basic. -->
     <!-- </div> -->
   </div>
+</div>
 </div>
