--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div ng-if="uctrl.loggedIn">
+<div ng-if="uctrl.initialProfileUpdate">
   We see that you've created a new account! Add some details and shit!
   <form ng-submit="uctrl.editUser()">
     <input type="text" ng-model="uctrl.updatedEmail" placeholder="Email"/>
@@ -48,6 +48,8 @@
     <input type="text" ng-model="uctrl.updatedZip" placeholder="Zip"/>
     <input type="text" ng-model="uctrl.updatedImageLink" placeholder="Image URL"/>
     <input type="text" ng-model="uctrl.updatedInterests" placeholder="Interests"/>
+      <br/>
+    <input type="submit" value="submit"/>
   </form>
 </div>
 </div>
