--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -11,10 +11,10 @@
     <!-- <div ng-if="!mctrl.showingLogin" ng-click="mctrl.showingLogin=true; mctrl.showingRegister=false;">LOGIN</div>
     <div ng-if="mctrl.showingLogin"> -->
 
-      <form ng-submit="uctrl.loginUser()">
-         <input type="text" placeholder="email">
+      <form ng-submit="uctrl.loginUser(email, password)">
+         <input type="text" ng-model="uctrl.email" placeholder="email">
           <br/>
-         <input type="password" placeholder="password">
+         <input type="password" ng-model="uctrl.password" placeholder="password">
           <br/>
          <input type="submit" value="login">
       </form>
@@ -26,9 +26,9 @@
     <div ng-if="mctrl.showingRegister"> -->
 
       <form ng-submit="uctrl.postUser()">
-         <input ng-model="uctrl.email" type="text" placeholder="email">
+         <input ng-model="uctrl.regEmail" type="text" placeholder="email">
           <br/>
-         <input ng-model="uctrl.password" type="password" placeholder="password">
+         <input ng-model="uctrl.regPassword" type="password" placeholder="password">
           <br/>
          <input type="submit" value="register">
       </form>
@@ -39,32 +39,33 @@
   </div>
 </div>
 
-<div ng-if="uctrl.initialProfileUpdate">
-  We see that you've created a new account! Add some details and shit!
-  <form ng-submit="uctrl.editUser()">
-    <input type="text" ng-model="uctrl.updatedEmail" placeholder="Email"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedPassword" placeholder="Password"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedName" placeholder="Name"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedAge" placeholder="Age"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedPhone" placeholder="Phone"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedCountry" placeholder="Country"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedCity" placeholder="City"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedZip" placeholder="Zip"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedImageLink" placeholder="Image URL"/>
-      <br/>
-    <input type="text" ng-model="uctrl.updatedInterests" placeholder="Interests"/>
-      <br/>
-    <input type="submit" value="submit"/>
-  </form>
-</div>
+<div ng-if="uctrl.loggedIn">
+  <div ng-if="uctrl.initialProfileUpdate">
+    We see that you've created a new account! Add some details and shit!
+    <form ng-submit="uctrl.editUser()">
+      <input type="text" ng-model="uctrl.updatedEmail" placeholder="Email"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedPassword" placeholder="Password"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedName" placeholder="Name"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedAge" placeholder="Age"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedPhone" placeholder="Phone"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedCountry" placeholder="Country"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedCity" placeholder="City"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedZip" placeholder="Zip"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedImageLink" placeholder="Image URL"/>
+        <br/>
+      <input type="text" ng-model="uctrl.updatedInterests" placeholder="Interests"/>
+        <br/>
+      <input type="submit" value="submit"/>
+    </form>
+  </div>
 </div>
 
 </div>
