--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -1,45 +1,11 @@
-<div ng-controller="userController as uctrl">
+<div ng-controller="userController as uctrl"> <!---Using userController--->
 
-<div ng-if="uctrl.loggedIn">
+<div ng-if="uctrl.loggedIn"> <!---If user is logged in--->
+
   <button ng-click="uctrl.logoutUser()">
     Log Out
   </button>
-</div> <!--//make this do stuff -->
 
-<div ng-if="!uctrl.loggedIn">
-  <div id="login">
-    <!-- <div ng-if="!mctrl.showingLogin" ng-click="mctrl.showingLogin=true; mctrl.showingRegister=false;">LOGIN</div>
-    <div ng-if="mctrl.showingLogin"> -->
-
-      <form ng-submit="uctrl.loginUser(email, password)">
-         <input type="text" ng-model="uctrl.email" placeholder="email">
-          <br/>
-         <input type="password" ng-model="uctrl.password" placeholder="password">
-          <br/>
-         <input type="submit" value="login">
-      </form>
-
-    <!-- </div> -->
-  </div>
-  <div id="register">
-    <!-- <div ng-if="!mctrl.showingRegister" ng-click="mctrl.showingRegister=true; mctrl.showingLogin=false;">REGISTER</div>
-    <div ng-if="mctrl.showingRegister"> -->
-
-      <form ng-submit="uctrl.postUser()">
-         <input ng-model="uctrl.regEmail" type="text" placeholder="email">
-          <br/>
-         <input ng-model="uctrl.regPassword" type="password" placeholder="password">
-          <br/>
-         <input type="submit" value="register">
-      </form>
-      <!-- Adding angular to the form data, specifically in the case of:
-      <button ng-click="mctrl.showingRegister=false; mctrl.showingLogin=false;">
-      detaches the data from the form somehow.  Therefore, I have to revert my code to something more basic. -->
-    <!-- </div> -->
-  </div>
-</div>
-
-<div ng-if="uctrl.loggedIn">
   <div ng-if="uctrl.initialProfileUpdate">
     We see that you've created a new account! Add some details and shit!
     <form ng-submit="uctrl.editUser()">
@@ -66,6 +32,38 @@
       <input type="submit" value="submit"/>
     </form>
   </div>
-</div>
 
 </div>
+
+<div ng-if="!uctrl.loggedIn"> <!---If user is not logged in--->
+
+    <div id="login">
+
+        <form ng-submit="uctrl.loginUser(email, password)">
+           <input type="text" ng-model="uctrl.email" placeholder="email">
+            <br/>
+           <input type="password" ng-model="uctrl.password" placeholder="password">
+            <br/>
+           <input type="submit" value="login">
+        </form>
+
+
+    </div>
+    <div id="register">
+
+        <form ng-submit="uctrl.postUser()">
+           <input ng-model="uctrl.regEmail" type="text" placeholder="email">
+            <br/>
+           <input ng-model="uctrl.regPassword" type="password" placeholder="password">
+            <br/>
+           <input type="submit" value="register">
+        </form>
+
+    </div>
+  </div>
+
+  <div ng-if="uctrl.loggedIn">
+
+  </div>
+
+</div> <!---Stop uctrl--->
