Changed notes in loginreg.html

--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -33,7 +33,7 @@
     </form>
   </div>
 
-</div> <!---This closes uctrl.isLogged--->
+</div> <!---This closes uctrl.loggedIn--->
 
 <div ng-if="!uctrl.loggedIn"> <!---If user is not logged in--->
 
@@ -57,6 +57,6 @@
     </form>
   </div>
 
-</div> <!---Closes !uctrl.isLogged--->
+</div> <!---Closes !uctrl.loggedIn--->
 
 </div> <!---Stop uctrl--->
