modified code regarding getevents and getusers

--- a/public/includes/loginreg.html
+++ b/public/includes/loginreg.html
@@ -1,6 +1,9 @@
 <div ng-controller="userController as uctrl"> <!---Using userController--->
 
+<button ng-click="uctrl.getUsers()">GET USERS</button>
+
 <div ng-if="uctrl.loggedIn"> <!---If user is logged in--->
+
 
   <button ng-click="uctrl.logoutUser()">
     Log Out
