--- a/public/includes/questions.html
+++ b/public/includes/questions.html
@@ -1,20 +1,23 @@
+<br><br>
+
 <div>
   <div id="Q_saved_questions_container">
-    <div>Current Questions users must answer to gain entry:</div>
-    <div id="Q_saved_questions">
-      //loop display divs for questions
+      <div id="Q_saved_questions">
+      <!-- //loop display divs for questions
       //each question gets a button to display/hide answers
-        //the correct answer should have special CSS highlighting it
+      //the correct answer should have special CSS highlighting it -->
     </div>
   </div>
   <div id="Q_compose_questions_container">
-    <div>Compose new question:</div>
+    <div>Compose new question to validate entry:</div>
     <div id="Q_compose_questions">
-      <form class="" action="index.html" ng-submit="">
-        <input type="text" ng-model="" placeholder="Question?">
-        <input type="text" ng-model="" placeholder="Correct Answer">
-        <input type="text" ng-model="" placeholder="Incorrect Answer">
+      <form class="" action="index.html" > <!--//ng-submit=""-->
+        <input class="Q_TextField" type="text" placeholder="Question?"><br> <!--ng-model=""-->
+        <input class="Q_TextField" type="text" placeholder="Correct Answer"><br>
+        <input class="Q_TextField" type="text" placeholder="Incorrect Answer"><br>
         <button type="button" name="button">+ new incorrect Answer</button>
       </form>
     </div>
   </div>
+
+<br><br>
