file cleanup before pull

--- a/public/includes/questions.html
+++ b/public/includes/questions.html
@@ -1,6 +1,6 @@
 <br><br>
 
-<div>
+<div ng-controller="mainController as mctrl"><!---Using userController--->
   <div id="Q_saved_questions_container">
       <div id="Q_saved_questions">
       <!-- //loop display divs for questions
