--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ form > input {
 .container-fluid {
   display:flex;
 }*/
+
 html {
   margin: 0 auto;
 }
@@ -23,6 +24,9 @@ form > input {
 
 form {
   margin: 0 auto;
+}
+ul{
+  list-style: none;
 }
 #Q_saved_questions_container{
 
