--- a/public/includes/nav.html
+++ b/public/includes/nav.html
@@ -6,7 +6,7 @@
     </div>
 
       <ul class="nav navbar-nav">
-        <li ng-if="uctrl.loggedIn" ng-click="uctrl.handleUserProfile()"><a href="#">Profile</a></li>
+        <!-- <li ng-if="uctrl.loggedIn"><a href="#">Profile</a></li> -->
         <li><a href="#">About</a></li>
         <li ng-if="!uctrl.loggedIn" ng-click="uctrl.handleLogForm()"><a href="#">Login</a></li>
         <li ng-if="!uctrl.loggedIn" ng-click="uctrl.handleRegForm()"><a href="#">Register</a></li>
