--- a/public/includes/events.html
+++ b/public/includes/events.html
@@ -52,7 +52,14 @@
           <br/>
         <input type="text" ng-model="mctrl.interestTags" placeholder="Interest Tags"/>
           <br/>
+          <!--Questions composition section -->
+        <div class="nav" ng-include="'includes/questions.html'"></div>
+
         <input type="submit" value="Create New Event">
+
+
+
+
       </form>
     </div>
 
