login and register are noew in-line with the nav bar

--- a/public/includes/nav.html
+++ b/public/includes/nav.html
@@ -9,36 +9,72 @@
         <!-- <li ng-if="uctrl.loggedIn"><a href="#">Profile</a></li> -->
         <li><a href="#">About</a></li>
         <li ng-if="!uctrl.loggedIn" ng-click="uctrl.handleLogForm()"><a href="#">Login</a></li>
+        <li>
+          <!---Log-in Form--->
+          <div ng-if="!uctrl.showLogForm && !uctrl.loggedIn">
+            <form ng-submit="uctrl.loginUser()" class="form-inline">
+              <div class="form-group loggy">
+                <input ng-model="uctrl.email" class="form-control" type="text" placeholder="email">
+              </div>
+              <div class="form-group loggy">
+                <input ng-model="uctrl.password" class="form-control" type="password" placeholder="password">
+              </div>
+              <div class="form-group loggy_btn">
+                <input type="submit" value="login">
+              </div>
+            </form>
+          </div>
+        </li>
         <li ng-if="!uctrl.loggedIn" ng-click="uctrl.handleRegForm()"><a href="#">Register</a></li>
+        <li>
+          <!---Registration Form--->
+          <div ng-if="uctrl.showRegForm && !uctrl.loggedIn">
+            <form ng-submit="uctrl.postUser()" class="form-inline">
+              <div class="form-group loggy">
+                <input ng-model="uctrl.regEmail" class="form-control" type="text" placeholder="email">
+              </div>
+              <div class="form-group loggy">
+                <input ng-model="uctrl.regPassword" class="form-control" type="password" placeholder="password">
+              </div>
+              <div class="form-group loggy_btn">
+                <input type="submit" value="register">
+              </div>
+            </form>
+          </div>
+        </li>
         <li ng-if="uctrl.loggedIn" ng-click="uctrl.logoutUser()"><a href="#">Log Out</a></li>
       </ul>
 
 
     <!---Registration Form--->
-    <div ng-if="uctrl.showRegForm && !uctrl.loggedIn">
+    <!-- <div ng-if="uctrl.showRegForm && !uctrl.loggedIn">
       <form ng-submit="uctrl.postUser()" class="form-inline">
-        <div class="form-group">
+        <div class="form-group loggy">
           <input ng-model="uctrl.regEmail" class="form-control" type="text" placeholder="email">
         </div>
-        <div class="form-group">
+        <div class="form-group loggy">
           <input ng-model="uctrl.regPassword" class="form-control" type="password" placeholder="password">
         </div>
+        <div class="form-group loggy_btn">
           <input type="submit" value="register">
+        </div>
       </form>
-    </div>
+    </div> -->
 
     <!---Log-in Form--->
-    <div ng-if="!uctrl.showLogForm && !uctrl.loggedIn">
+    <!-- <div ng-if="!uctrl.showLogForm && !uctrl.loggedIn">
       <form ng-submit="uctrl.loginUser()" class="form-inline">
-        <div class="form-group">
+        <div class="form-group loggy">
           <input ng-model="uctrl.email" class="form-control" type="text" placeholder="email">
         </div>
-        <div class="form-group">
+        <div class="form-group loggy">
           <input ng-model="uctrl.password" class="form-control" type="password" placeholder="password">
         </div>
+        <div class="form-group loggy_btn">
           <input type="submit" value="login">
+        </div>
       </form>
-    </div>
+    </div> -->
 
   </div>
 </nav>
