--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,17 @@ ul{
 #Q_compose_questions{
 
 }
+.loggy{
+  margin-top: .4em;
+}
+.loggy_btn{
+  margin-top: .4em;
+}
+#navvy{
+  -webkit-box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.4);
+  -moz-box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.4);
+  box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.4);
+}
 .Q_TextField{
   width:30em;
 }
