--- a/public/includes/events.html
+++ b/public/includes/events.html
@@ -24,11 +24,12 @@
           </div>
         </div>
       </div>
-    </div>
 
-  <div class="text-center"><button ng-click="mctrl.handleCreate()" class="btn btn-primary btn-sx" type="button">Create Event</button></div>
+  <div class="text-center">
+    <button ng-click="mctrl.handleCreate()" class="btn btn-primary btn-sx" type="button">Create Event</button>
+  </div>
     <div ng-if="mctrl.indexCreateForm">
-      <form ng-submit="mctrl.postEvent()">
+      <form ng-submit="mctrl.postEvent()" class="centerFormDiv">
           <br/>
         <input type="text" ng-model="mctrl.title" placeholder="Title" />
           <br/>
