slight box shadow behind the jumbotron

--- a/public/includes/events.html
+++ b/public/includes/events.html
@@ -3,7 +3,7 @@
   <div ng-controller="mainController as mctrl" class="container">
     <!-- <button ng-click="mctrl.getEvents()">Refresh Feed</button> -->
     <!-- <div class="row"> -->
-      <div ng-repeat="event in mctrl.events track by $index" class="jumbotron" ng-mouseenter="hoverState = true" ng-mouseleave="hoverState = false">
+      <div ng-repeat="event in mctrl.events track by $index" class="jumbotron jumbofriend" ng-mouseenter="hoverState = true" ng-mouseleave="hoverState = false">
         <!-- <h3 ng-click="mctrl.profileEventToggle()" class="display-4">{{event.title}}</h3> -->
         <h3 class="display-4">{{event.title}}</h3>
         <div class="lead">organized by {{event.ownerEmail}}</div>
