--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,12 @@ ul{
 .jumbotron {
   transition: transform 0.5s;
 }
+.jumbofriend{
+  margin-top: 1em;
+  -webkit-box-shadow: 10px 10px 7px -8px rgba(0,0,0,0.24);
+  -moz-box-shadow: 10px 10px 7px -8px rgba(0,0,0,0.24);
+  box-shadow: 10px 10px 7px -8px rgba(0,0,0,0.24);
+}
 #Q_saved_questions_container{
 
 }
