--- a/public/includes/events.html
+++ b/public/includes/events.html
@@ -28,8 +28,8 @@
   <div class="text-center">
     <button ng-click="mctrl.handleCreate()" class="btn btn-primary btn-sx" type="button">Create Event</button>
   </div>
-    <div ng-if="mctrl.indexCreateForm">
-      <form ng-submit="mctrl.postEvent()" class="centerFormDiv">
+    <div ng-if="mctrl.indexCreateForm" class="text-center">
+      <form ng-submit="mctrl.postEvent()">
           <br/>
         <input type="text" ng-model="mctrl.title" placeholder="Title" />
           <br/>
@@ -56,6 +56,7 @@
         <input type="text" ng-model="mctrl.address" placeholder="Address"/>
           <br/>
         <input type="text" ng-model="mctrl.interestTags" placeholder="Interest Tags"/>
+          <br/>
           <br/>
         <input type="submit" value="Create New Event">
       </form>
