--- a/public/includes/events.html
+++ b/public/includes/events.html
@@ -28,7 +28,7 @@
   <div class="text-center">
     <button ng-click="mctrl.handleCreate()" class="btn btn-primary btn-sx" type="button">Create Event</button>
   </div>
-    <div ng-if="mctrl.indexCreateForm">
+    <div class="text-center" ng-if="mctrl.indexCreateForm">
       <form ng-submit="mctrl.postEvent()" class="centerFormDiv">
           <br/>
         <input type="text" ng-model="mctrl.title" placeholder="Title" />
